# orbbec_competition

./: .gitignore
IsaacAsset/drone/Collected_drone/: drone.usd
IsaacAsset/drone/Collected_drone/omniverse-content-production.s3-us-west-2.amazonaws.com/Assets/Isaac/2023.1.1/Isaac/Sensors/Orbbec/Gemini 2/: orbbec_gemini2_V1.0.usd
IsaacAsset/drone/Collected_drone/project/m/src/model/urdf/drone/: base_link.usd  wing.usd
src/drone_msgs/: CMakeLists.txt  package.xml
src/drone_msgs/msg/: ExecStatus.msg  PositionCommand.msg
src/isaac_tf/: CMakeLists.txt  package.xml
src/isaac_tf/include/: drone_drive.h
src/isaac_tf/launch/: bringup.launch.py
src/isaac_tf/src/: drone_drive.cpp
src/take_picture/: CMakeLists.txt  package.xml
src/take_picture/src/: take_picture.cpp
