<?xml version="1.0"?>
<package format="2">
  <name>drone_drive</name>
  <version>0.0.1</version>
  <description>Control logic for autonomous drone flight and camera operations.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>drone_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
