<?xml version="1.0"?>
<package format="3">
  <name>take_picture</name>
  <version>0.0.1</version>
  <description>ROS2 node to capture single images and record videos from a camera topic.</description>

  <!-- 维护者与授权 -->
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 编译系统 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- 导出信息 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
